--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Playfair Display', serif;
     /* font-family: 'Playfair Display SC', serif; */
+    overflow: hidden;
 }
 
 body, html {
@@ -18,6 +19,11 @@ body {
     background-size: cover;
 }
 
+#main {
+    width: 100%;
+    height: 100%;
+}
+
 #content {
     width: 100%;
     height: 100%;
@@ -28,5 +34,88 @@ body {
 }
 
 .divForm {
-    background-color: #333230;
+    background-color: #333230ef;
+    width: 35%;
+    /* height: 80%; */
+    border-radius: 20px;
 }
+
+.imgForm img {
+    width: 250px;
+}
+
+@media (max-width: 1300px) {
+    .divForm {
+        width: 55%;
+    }
+
+    .imgForm img {
+        width: 200px;
+    }
+}
+
+@media (max-width: 900px) {
+    .divForm {
+        width: 75%;
+    }
+
+    .imgForm img {
+        width: 150px;
+    }
+}
+
+@media (max-width: 600px) {
+    .divForm {
+        width: 95%;
+    }
+
+    .imgForm img {
+        width: 100px;
+    }
+}
+
+.camposForm input {
+    width: 70%;
+    margin-bottom: 15px;
+    font-size: 18px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    border: none;
+    transition: 0.3s;
+}
+
+.camposForm input:focus {
+    outline: none;
+    box-shadow: 3px 3px #72716f;
+}
+
+.footerForm button {
+    width: 25%;
+    font-size: 18px;
+    padding: 7px 0;
+    border-radius: 30px;
+    border: none;
+    color: white;
+    background-color: #414141;
+    transition: 0.3s;
+}
+
+@media (max-width: 600px) {
+    .camposForm input, .footerForm button {
+        font-size: 15px;
+    }
+}
+
+.footerForm button:hover {
+    background-color: #72716f;
+}
+
+.footerForm a {
+    color: #18afaf;
+    transition: 0.3s;
+}
+
+.footerForm a:hover {
+    color: #298080;
+}
+
