--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,18 +19,35 @@ body {
     background-size: cover;
 }
 
-#main {
-    width: 100%;
+.body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#corpo {
+    flex: 1 1 auto;
+}
+
+.corp {
+    margin: auto;
     height: 100%;
 }
+
 
 #content {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.267);
+    background-color: rgba(0, 0, 0, 0.445);
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#contentHome {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.555);
 }
 
 .divForm {
@@ -119,3 +136,25 @@ body {
     color: #298080;
 }
 
+.userInfo img {
+    max-width: 100%;
+}
+
+
+/* --------------------- */
+
+
+.listarPageGeral {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+}
+
+.headerListar {
+    background-color: #c7c7c7;
+}
+
+.headerListar img {
+    max-width: 100%;
+}
