--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .footerForm button {
-    width: 25%;
+    width: 50%;
     font-size: 18px;
     padding: 7px 0;
     border-radius: 30px;
@@ -153,6 +153,7 @@ body {
 
 .headerListar {
     background-color: #c7c7c7;
+    padding: 15px;
 }
 
 .headerListar img {
