--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     font-family: 'Playfair Display', serif;
     /* font-family: 'Playfair Display SC', serif; */
-    /* overflow: hidden; */
 }
 
 body,
@@ -28,6 +27,7 @@ body {
 
 #corpo {
     flex: 1 1 auto;
+    background-color: rgba(0, 0, 0, 0.445);
 }
 
 .corp {
@@ -48,7 +48,7 @@ body {
 #contentHome {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.555);
+    /* background-color: rgba(0, 0, 0, 0.555); */
     /* overflow-y: scroll; */
 }
 
@@ -229,7 +229,7 @@ body {
 }
 
 .dashboardLista table {
-    border-radius: 5px;
+    border-radius: 10px;
     /* border: none; */
 }
 
