--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ body {
 }
 
 .headerListar img {
-    max-width: 100%;
+    max-width: 50%;
 }
 
 .corpoListar {
@@ -231,6 +231,11 @@ body {
 .dashboardLista table {
     border-radius: 5px;
     /* border: none; */
+}
+
+.dashboardLista table thead {
+    font-size: 1.1vw;
+    background-color: ;
 }
 
 /* -------------------- */
