--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,8 +114,8 @@ body {
     padding: 7px 0;
     border-radius: 30px;
     border: none;
-    color: white;
-    background-color: #414141;
+    color: #333230;
+    background-color: #92F3AD;
     transition: 0.3s;
 }
 
@@ -125,10 +125,11 @@ body {
     .footerForm button {
         font-size: 15px;
     }
+
 }
 
 .footerForm button:hover {
-    background-color: #72716f;
+    background-color: #78d8c3;
 }
 
 .footerForm a {
@@ -235,7 +236,24 @@ body {
 
 .dashboardLista table thead {
     font-size: 1.1vw;
-    background-color: ;
+}
+
+.dashboardLista th, .dashboardLista td {
+    vertical-align: middle;
+}
+
+@media (max-width: 430px) {
+
+    .showtd {
+        display: none;
+    }
+
+}
+
+
+
+table {
+    font-size: smaller;
 }
 
 /* -------------------- */
