--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,9 +114,60 @@ body {
     padding: 7px 0;
     border-radius: 30px;
     border: none;
-    color: #333230;
-    background-color: #92F3AD;
+    color: #61605f;
+    /* background-color: #92F3AD;
+     */
+     background-image: radial-gradient(100% 100% at 100% 0, #4eb5d1 0, #92F3AD 100%);
+     box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+     cursor: pointer;
+     transition: box-shadow .15s,transform .15s;
+     will-change: box-shadow,transform;
     transition: 0.3s;
+}
+
+.button-29 {
+  align-items: center;
+  appearance: none;
+  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.button-29:focus {
+  box-shadow: #4eb5d1 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #4eb5d1 0 -3px 0 inset;
+}
+
+.button-29:hover {
+  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #4eb5d1 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-29:active {
+  box-shadow: #4eb5d1 0 3px 7px inset;
+  transform: translateY(2px);
 }
 
 @media (max-width: 600px) {
@@ -128,8 +179,18 @@ body {
 
 }
 
+.footerForm button:focus {
+    box-shadow: #4eb5d1 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #4eb5d1 0 -3px 0 inset;
+}
+
 .footerForm button:hover {
-    background-color: #78d8c3;
+    /* box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #4eb5d1 0 -3px 0 inset; */
+  transform: translateY(2px);
+}
+
+.footerForm button:hover {
+    box-shadow: #4eb5d1 0 3px 7px inset;
+    transform: translateY(-2px);
 }
 
 .footerForm a {
@@ -139,6 +200,7 @@ body {
 
 .footerForm a:hover {
     color: #298080;
+    
 }
 
 .footer hr {
