Atualizado página Home

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,21 +28,12 @@ body {
 #corpo {
     flex: 1 1 auto;
     background-color: rgba(0, 0, 0, 0.445);
+    height: 100%;
 }
 
 .corp {
     margin: auto;
     height: 100%;
-}
-
-
-#content {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.445);
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 #contentHome {
@@ -125,51 +116,6 @@ body {
     transition: 0.3s;
 }
 
-.button-29 {
-  align-items: center;
-  appearance: none;
-  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
-  border: 0;
-  border-radius: 6px;
-  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow,transform;
-  font-size: 18px;
-}
-
-.button-29:focus {
-  box-shadow: #4eb5d1 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #4eb5d1 0 -3px 0 inset;
-}
-
-.button-29:hover {
-  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #4eb5d1 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-
-.button-29:active {
-  box-shadow: #4eb5d1 0 3px 7px inset;
-  transform: translateY(2px);
-}
-
 @media (max-width: 600px) {
 
     .camposForm input,
@@ -212,6 +158,21 @@ body {
     max-width: 100%;
 }
 
+.userInfo a {
+    color: #246b6b;
+}
+
+.userInfo a:hover {
+    color: #1b5858;
+}
+
+.navbar-nav .row .col-3 span {
+    font-size: 28px;
+}
+
+.navbar-nav a:hover {
+    background-color: #61605f;
+}
 
 /* --------------------- */
 
@@ -221,6 +182,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
+    height: 100%;
 }
 
 .headerListar {
@@ -237,6 +199,19 @@ body {
     background-color: rgba(228, 228, 228, 0.795);
     border-radius: 15px;
     padding: 25px;
+}
+
+.corpoListarHome {
+    width: 100%;
+    height: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* height: 500px; */
+}
+
+.corpoListarHome h4 {
+    color: #246b6b;
 }
 
 .pesquisaLista label {
@@ -327,5 +302,9 @@ table {
 
     h4 {
         font-size: 3vw;
+    }
+    
+    h5 {
+        font-size: 2vw;
     }
 }
