--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,12 +36,10 @@ body {
     height: 100%;
 }
 
-#contentHome {
+/* #contentHome {
     width: 100%;
     height: 100%;
-    /* background-color: rgba(0, 0, 0, 0.555); */
-    /* overflow-y: scroll; */
-}
+} */
 
 .divForm {
     background-color: #333230ef;
@@ -131,12 +129,12 @@ body {
 
 .footerForm button:hover {
     /* box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #4eb5d1 0 -3px 0 inset; */
-  transform: translateY(2px);
+  transform: translateY(-2px);
 }
 
 .footerForm button:hover {
     box-shadow: #4eb5d1 0 3px 7px inset;
-    transform: translateY(-2px);
+    transform: translateY(2px);
 }
 
 .footerForm a {
@@ -182,6 +180,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
+    margin-bottom: 15px;
     height: 100%;
 }
 
