--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,21 +25,25 @@ body {
     flex-direction: column;
 }
 
+.divFormIni {
+    height: 100%;
+    width: 100%;
+}
+
 #corpo {
     flex: 1 1 auto;
     background-color: rgba(0, 0, 0, 0.445);
-    height: 100%;
+    /* height: 100%; */
 }
 
 .corp {
     margin: auto;
-    height: 100%;
+    /* height: 100%; */
 }
 
-/* #contentHome {
-    width: 100%;
-    height: 100%;
-} */
+#contentHome {
+    overflow-y: auto !important;
+}
 
 .divForm {
     background-color: #333230ef;
@@ -82,19 +86,52 @@ body {
     }
 }
 
+.imgNav img{
+    height: 80px;
+}
+
+input {
+    font-size: 16px;
+    color: #61605f;
+    transition: 0.4s !important;
+}
+
+input:focus {
+    font-size: 18px;
+}
+
+textarea {
+    font-size: 16px;
+    transition: 0.4s !important;
+}
+
+textarea:focus {
+    font-size: 18px;
+}
+
 .camposForm input {
     width: 70%;
     margin-bottom: 15px;
-    font-size: 18px;
+    font-size: 15px;
     padding: 10px 20px;
-    border-radius: 30px;
     border: none;
     transition: 0.3s;
+    border-bottom: 1px solid #e0e0e0;
+    background-color: transparent;
+    color: #fff;
 }
 
 .camposForm input:focus {
     outline: none;
-    box-shadow: 3px 3px #72716f;
+    font-size: 18px;
+    background-color: #ffffff4f;
+    border-radius: 15px;
+    border: none;
+    /* box-shadow: 3px 3px #72716f; */
+}
+
+.camposForm input:focus::placeholder {
+    color: #fff;
 }
 
 .footerForm button {
@@ -395,4 +432,9 @@ table {
 .divPagi {
     display: flex;
     align-items: center;
+}
+
+.capaVer {
+    width: 100%;
+    height: 100%;
 }
